# navya-cleaning-april

./: CLAUDE.md  GEMINI.md  docker-compose.test.yml  mythos.db  render.yaml
.github/: dependabot.yml
NAVYA-LOCAL-DEV-SERVER/: README.md  biome.json  pyproject.toml  test_import.py
NAVYA-LOCAL-DEV-SERVER/services/testing-mesh/: main.py
cleaning-services-website/: .gitignore  CLAUDE.md  biome.json  build_admin.txt  build_integration.txt  build_locations.txt  build_output.txt  build_verify.txt  final_build_check.txt  local_build_log_npx.txt  middleware.ts  mythos.db  next.config.mjs  package-lock.json  package.json  prisma.config.ts  render.yaml  tailwind.config.js  tsconfig.json
cleaning-services-website/.github/workflows/: deploy.yml
cleaning-services-website/prisma/: mythos.db  schema.prisma  seed.js  seed.ts
cleaning-services-website/src/app/: globals.css  layout.tsx  page.module.css  page.tsx  robots.ts  sitemap.ts
cleaning-services-website/src/app/admin/: page.tsx
cleaning-services-website/src/app/booking/: page.tsx
cleaning-services-website/src/app/compliance/: page.tsx
cleaning-services-website/src/app/dashboard/: page.tsx
cleaning-services-website/src/components/: AdBanner.tsx  DynamicQuoting.tsx  EndOfLeaseCalculator.tsx  Footer.tsx  InteractiveElements.tsx  LocationBanner.tsx  Navbar.tsx  ThreeDModel.tsx
cleaning-services-website/src/lib/: cro-engine.ts  data.ts  db.ts  librarian.ts
docs/infrastructure/: LOCAL_DEV_SERVER_2026.md
server/testing_mesh/: main.py
src/open_mythos/: main.py  optimizer.py
(+17 files in other folders)
